@@ -53,6 +53,43 @@ ExecStop=/bin/kill -15 $MAINPID
 WantedBy=multi-user.target
 ```
 
+Exemple 2
+
+```
+[Unit]
+Description=Apache Tomcat Web Application Container
+Requires=network.target
+
+[Service]
+Type=simple
+User=tomcat7
+Group=tomcat7
+WorkingDirectory=/usr/share/tomcat7
+ExecStart=/usr/lib/jvm//java-1.7.0-openjdk-amd64/bin/java -Djava.util.logging.config.file=/var/lib/tomcat7/conf/logging.properties \
+-Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager \
+-server -Djava.awt.headless=true -Duser.language=en \
+-Djavax.net.ssl.trustStore=/etc/ssl/certs/java/cacerts \
+-Djavax.net.ssl.trustStorePassword=changeit \
+-javaagent:/home/admin/spring-instrument-3.1.2.RELEASE.jar \
+-Dcom.e3i.gda.util.chkpasswd=true \
+-Xms1g -Xmx6g -XX:MaxPermSize=1g \
+-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n \
+-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=9015 \
+-Dcom.sun.management.jmxremote.authenticate=false \
+-Dcom.sun.management.jmxremote.ssl=false -Djava.rmi.server.hostname=10.x.x.x \
+-Djdk.tls.ephemeralDHKeySize=2048 -Dignore.endorsed.dirs= \
+-classpath /usr/share/tomcat7/bin/bootstrap.jar:/usr/share/tomcat7/bin/tomcat-juli.jar \
+-Dcatalina.base=/var/lib/tomcat7 \
+-Dcatalina.home=/usr/share/tomcat7 \
+-Djava.io.tmpdir=/tmp/tomcat7-tomcat7-tmp org.apache.catalina.startup.Bootstrap start
+ExecStop=/bin/kill -15 $MAINPID
+RestartSec=30
+Restart=always
+
+[Install]
+WantedBy=multi-user.target
+```
+
 After that run 
 
 ```
